--- a/PortraitCameraPro_Full/app/src/main/res/values/strings.xml
+++ b/PortraitCameraPro_Full/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Portrait Camera Pro</string>
+    <string name="app_name">PortraitCamera</string>
 </resources>
